--- a/ReservationHotel/pom.xml
+++ b/ReservationHotel/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>jaxws-rt</artifactId>
             <version>2.2.5</version>
         </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>2.2.4-1</version>
+        </dependency>
     </dependencies>
 
     <build>
